<resources>
    <string name="app_name">RobotMonitor</string>
    <string name="title_name">中科智慧机器人监控看板</string>
    <string name="get">搬运机取货</string>
    <string name="put">搬运机放货</string>
    <string name="stack_get">堆垛机取货</string>
    <string name="stack_putt">堆垛机入库</string>
    <string name="cut">切割机器人</string>
    <string name="code">激光刻码</string>
    <string name="version">视觉检测</string>
    <string name="AGV">AGV搬运车</string>
    <string name="weld">焊接机器人</string>
    <string name="weld_point">点焊</string>
    <string name="weld_line">全焊</string>
    <string name="carry">搬运机器人</string>
    <string name="exception">数据监测</string>
    <string name="device">当前设备</string>
    <string name="taskInfo">设备情况</string>
    <string name="device_name">设备名称:</string>
    <string name="device_version">设备型号:</string>
    <string name="load_more">正在加载</string>
    <string name="auto_refresh">自动刷新:</string>
    <string name="charge">AGV冲电站</string>
    <string name="AGV_power">AGV电量监测</string>
    <string name="charge_station">充电站监测</string>
    <string name="voltage">电压:</string>
    <string name="electricity">电流:</string>
    <string name="power">功率:</string>
    <string name="rail_monitor">导轨监测</string>
    <string name="status">状态:</string>
    <string name="charging">充电</string>
    <string name="discharging">放电</string>
    <string name="battery">电池</string>
    <string name="battery1">电池1</string>
    <string name="battery2">电池2</string>
    <string name="launched_info">运行情况</string>
</resources>
