<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zk.robotmonitor.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <!-- left side -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/DIMEN_10PX"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- 左上 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/DIMEN_10PX"
                android:layout_weight="1"
                android:background="@color/cyan">

                <TextView
                    android:id="@+id/tv_robot_cut"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/cut"
                    android:padding="0dp"
                    android:text="@string/cut" />

                <TextView
                    android:id="@+id/tv_robot_code"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/code"
                    android:text="@string/code" />

            </LinearLayout>

            <!-- 左下 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:layout_weight="1"
                android:background="@color/cyan">

                <TextView
                    android:id="@+id/tv_robot_weld"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/weld"
                    android:padding="0dp"
                    android:text="@string/weld" />

                <TextView
                    android:id="@+id/tv_robot_carry"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/manipulator"
                    android:padding="0dp"
                    android:text="@string/carry" />

            </LinearLayout>
        </LinearLayout>

        <!-- Right side -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/DIMEN_10PX"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- 右上 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/DIMEN_10PX"
                android:layout_weight="1"
                android:background="@color/cyan">

                <TextView
                    android:id="@+id/tv_camera_check"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/video"
                    android:padding="0dp"
                    android:text="@string/version" />

                <TextView
                    android:id="@+id/tv_agv_car"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/car"
                    android:padding="0dp"
                    android:text="@string/AGV" />

            </LinearLayout>

            <!-- 右下 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/DIMEN_10PX"
                android:layout_weight="1"
                android:background="@color/cyan">

                <TextView
                    android:id="@+id/tv_exception_data"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/data"
                    android:padding="0dp"
                    android:text="@string/exception" />

                <TextView
                    android:id="@+id/tv_charge"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@mipmap/charge"
                    android:padding="0dp"
                    android:text="@string/charge" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/DIMEN_5PX"
        android:layout_weight="1"
     >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                android:id="@+id/proceed_stack_get"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_49PX"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_marginBottom="@dimen/DIMEN_2PX"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/stack_get" />
                <TextView
                    android:id="@+id/proceed_stack_put"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DIMEN_49PX"
                    android:layout_marginRight="@dimen/DIMEN_2PX"
                    android:background="@drawable/corner_cyan"
                    android:gravity="center"
                    android:text="@string/stack_putt" />
            </LinearLayout>
            <TextView
                android:id="@+id/proceed_agv_car"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/AGV" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/proceed_carry_get"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DIMEN_49PX"
                    android:layout_marginRight="@dimen/DIMEN_2PX"
                    android:layout_marginBottom="@dimen/DIMEN_2PX"
                    android:background="@drawable/corner_cyan"
                    android:gravity="center"
                    android:text="@string/get" />
                <TextView
                    android:id="@+id/proceed_carry_put"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/DIMEN_49PX"
                    android:layout_marginRight="@dimen/DIMEN_2PX"
                    android:background="@drawable/corner_cyan"
                    android:gravity="center"
                    android:text="@string/put" />
            </LinearLayout>

            <TextView
                android:id="@+id/proceed_cut"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/cut" />

            <TextView
                android:id="@+id/proceed_vesion"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/version" />

            <TextView
                android:id="@+id/proceed_code"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/code" />
            <TextView
                android:id="@+id/proceed_scan_code"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="扫码" />

            <TextView
                android:id="@+id/proceed_point_weld"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/DIMEN_2PX"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/weld_point" />

            <TextView
                android:id="@+id/proceed_line_weld"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/corner_cyan"
                android:gravity="center"
                android:text="@string/weld_line" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
