<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zk.robotmonitor.TaskDetailActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/corner_no_fill"
        android:orientation="vertical">


        <TextView
            style="@style/textTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_60PX"
            android:text="@string/device" />

        <ImageView
            android:id="@+id/iv_device_img"
            android:layout_width="@dimen/DIMEN_200PX"
            android:layout_height="@dimen/DIMEN_200PX"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/DIMEN_10PX" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_version"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"

                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_device_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/DIMEN_10PX"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="@drawable/corner_no_fill">

        <TextView
            style="@style/textTitleStyle"
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_60PX"
            android:text="@string/taskInfo" />

        <include layout="@layout/list_header" />

        <ListView
            android:id="@+id/lv_task_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    </LinearLayout>

</LinearLayout>
