<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="com.zk.robotmonitor.AgvChargeActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/corner_no_fill"
        android:orientation="vertical">


        <TextView
            style="@style/textTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_60PX"
            android:text="@string/charge_station" />

        <ImageView
            android:id="@+id/iv_device_img"
            android:layout_width="@dimen/DIMEN_200PX"
            android:layout_height="@dimen/DIMEN_200PX"
            android:layout_marginBottom="@dimen/DIMEN_40PX"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/charge"
            android:layout_marginTop="@dimen/DIMEN_10PX" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:paddingLeft="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltage"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_charge_voltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_100PX"
                android:text="0v"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:paddingLeft="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricity"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_charge_electricity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_100PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:paddingLeft="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_charge_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_100PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/DIMEN_10PX"
            android:paddingBottom="@dimen/DIMEN_10PX"
            android:paddingLeft="@dimen/DIMEN_10PX"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:paddingLeft="@dimen/DIMEN_10PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />
            <TextView
                android:id="@+id/tv_charge_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/DIMEN_100PX"
                android:textColor="@color/black"
                android:textSize="@dimen/DIMEN_30PX" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/DIMEN_10PX"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/DIMEN_10PX"
            android:background="@drawable/corner_no_fill">
            <TextView
                style="@style/textTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_60PX"
                android:text="@string/AGV_power" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_80PX"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charging"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_20PX"
                    android:textColor="@color/red"
                    />

                <TextView
                    android:id="@+id/tv_agv_charge_voltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电压：0v"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />

                <TextView
                    android:id="@+id/tv_agv_charge_electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电流：0A"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />
                <TextView
                    android:id="@+id/tv_agv_charge_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="功率：200w"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_80PX">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discharging"
                    style="@style/textChargingStyle"
                    android:textColor="@color/red"
                    android:layout_marginLeft="@dimen/DIMEN_20PX"
                    />
                <TextView
                    android:id="@+id/tv_agv_discharge_voltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电压：0v"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />
                <TextView
                    android:id="@+id/tv_agv_discharge_electricity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电流：0A"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />
                <TextView
                    android:id="@+id/tv_agv_discharge_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="功率：200w"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gainsboro" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_80PX">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    style="@style/textChargingStyle"
                    android:textColor="@color/red"
                    android:layout_marginLeft="@dimen/DIMEN_20PX"
                    />

                <TextView
                    android:id="@+id/tv_agv_battery_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电池1电量：80%"
                    android:drawableLeft="@mipmap/battery"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />

                <TextView
                    android:id="@+id/tv_agv_battery_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电池2电量：80%"
                    android:drawableLeft="@mipmap/battery"
                    style="@style/textChargingStyle"
                    android:layout_marginLeft="@dimen/DIMEN_150PX"
                    />
            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@drawable/corner_no_fill"
            android:orientation="vertical"
            >
            <TextView
                style="@style/textTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/DIMEN_60PX"
                android:text="@string/rail_monitor" />
                <AbsoluteLayout
                    android:id="@+id/layout_rail_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/rail">

                    <com.zk.widget.LaunchedBoxView
                        android:id="@+id/lb_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_x="@dimen/DIMEN_1000PX"
                        android:layout_y="@dimen/DIMEN_200PX"
                        >
                    </com.zk.widget.LaunchedBoxView>


                </AbsoluteLayout>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
